--- a/app.json
+++ b/app.json
@@ -36,6 +36,20 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "a7b1d8fd-f050-436e-9722-644faea2f413"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/a7b1d8fd-f050-436e-9722-644faea2f413"
     }
   }
 }
